k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-brochure-mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: travel-brochure-mysql
  template:
    metadata:
      labels:
        component: travel-brochure-mysql
    spec:
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: travel-brochure-mysql
          image: asia.gcr.io/PROJECT_ID/travel-brochure-mysql:latest
          resources:
            limits:
              cpu: "30m"
              memory: "200Mi"
            requests:
              cpu: "20m"
              memory: "100Mi"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
              subPath: mysql
