k8s/travel-brochure-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-brochure-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: travel-brochure-api
  template:
    metadata:
      labels:
        component: travel-brochure-api
    spec:
      containers:
        - name: travel-brochure-api
          image: asia.gcr.io/PROJECT_ID/travel-brochure-api:latest
          resources:
            limits:
              cpu: "120m"
              memory: "200Mi"
            requests:
              cpu: "50m"
              memory: "100Mi"
          ports:
            - containerPort: 4000
