k8s/travel-brochure-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travel-brochure-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: travel-brochure-api
  ports:
    - port: 4000
      targetPort: 4000
