k8s/travel-brochure-front-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travel-brochure-front-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: travel-brochure-front
  ports:
    - port: 3000
      targetPort: 3000
