k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # rerite target path to "/". ex) /api/ -> /
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-production'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - tabishiyo.com
        - www.tabishiyo.com
      secretName: tabishiyo-com-tls
  rules:
    - host: tabishiyo.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: travel-brochure-front-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: travel-brochure-api-cluster-ip-service
              servicePort: 4000
    - host: www.tabishiyo.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: travel-brochure-front-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: travel-brochure-api-cluster-ip-service
              servicePort: 4000
